# yang66

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 202605150001_create_auth_tables.py  202605150002_create_core_business_tables.py  202605150003_create_analysis_risk_tables.py  202605160001_create_agent_tables.py  202605160002_create_knowledge_tables.py  202605160003_create_reporting_tables.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  graph.py  state.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: agent.py  analysis.py  auth.py  goals.py  health.py  interventions.py  knowledge.py  meals.py  profile.py  reports.py  risks.py
backend/app/core/: config.py  observability.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  agent.py  auth.py  business.py  knowledge.py  reporting.py
backend/app/schemas/: agent.py  auth.py  business.py  knowledge.py  reporting.py
backend/app/services/: agent_runner.py  auth.py  knowledge.py  nutrition.py  reporting.py
backend/app/tasks/: __init__.py  celery_app.py  report_tasks.py
backend/app/tests/: test_agent_workflow.py  test_analysis_risks.py  test_auth.py  test_business.py  test_health.py  test_knowledge_rag.py  test_reporting.py
docs/: ACCEPTANCE.md  AGENT_ARCHITECTURE.md  API.md  DATABASE.md  DEPLOYMENT.md  SUMMARY.md
frontend/: Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json
scripts/: check-env.ps1  (+8 more)
(+34 files in other folders)
