[project]
name = "graduate-nutrition-agent-backend"
version = "0.1.0"
description = "FastAPI backend for an Agentic AI graduate nutrition analysis and meal decision system."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.1",
  "pydantic-settings>=2.3.4",
  "email-validator>=2.2.0",
  "sqlalchemy>=2.0.31",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "redis>=5.0.7",
  "celery>=5.4.0",
  "openai>=1.35.7",
  "langgraph>=0.1.5",
  "pgvector>=0.3.2",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.10.1",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0"
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []

[[tool.mypy.overrides]]
module = ["celery.*", "jose.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
